# structured-outputs-multi-provider

./: .env  .env.example  .gitignore  README.en.md  README.md  pyproject.toml
src/structured_outputs_multi_provider/: main.py
src/structured_outputs_multi_provider/config/: env.py
src/structured_outputs_multi_provider/decorators/: http_client.py
src/structured_outputs_multi_provider/dependencies/infra/: llm.py  persistence.py
src/structured_outputs_multi_provider/dependencies/services/: bench.py  chain.py
src/structured_outputs_multi_provider/infra/llm/: llm_provider.py
src/structured_outputs_multi_provider/infra/llm/adapters/: deepseek.py  gemini.py  gemma.py
src/structured_outputs_multi_provider/infra/llm/interfaces/: llm_adapter.py  llm_provider.py
src/structured_outputs_multi_provider/infra/persistence/: persistence_provider.py
src/structured_outputs_multi_provider/infra/persistence/interfaces/: llm_result_repository.py  persistence_provider.py
src/structured_outputs_multi_provider/infra/persistence/repository/: llm_result_repository.py
src/structured_outputs_multi_provider/schemas/llm/: llm_adapter_result.py  llm_provider_result.py
src/structured_outputs_multi_provider/schemas/persistence/: llm_result.py
src/structured_outputs_multi_provider/services/: bench.py  chain.py
src/structured_outputs_multi_provider/utils/: ns_to_ms.py  s_to_ms.py
