[project]
name = "structured-outputs-multi-provider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Guilherme Tupinamba", email = "gtupinamba@pensadoria.com.br" }
]
requires-python = ">=3.13"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=4.0.0",
    "httpx>=0.28.1",
    "pydantic-settings>=2.14.1",
    "ruff>=0.15.15",
]

[project.scripts]
structured-outputs-multi-provider = "structured_outputs_multi_provider:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"
